version 5 Issue#5,6&12
12.     Looks like site is not compatible IE 10 & 11, as on the home page “Know More” option is not completely visible.

5.   “Know More” tab is getting overlapped in Google Chrome (mac) – See below screenshot (in next point below)

6.  “Know More” tab is getting overlapped in Internet Explorer (see screenshot below)

--- a/app/app.css
+++ b/app/app.css
@@ -303,11 +303,11 @@ div[ng-view] {
     }
 }*/
 
-@media (min-width: 767px) {
+/*@media (min-width: 767px) {
     #home{
         height: 522px;
     }
-}
+}*/
 
 section.home-section2 .container {
     text-align: center;
@@ -404,6 +404,8 @@ h4[ng-click]{
     text-align: left;
 }
 
-
+.remove-section-padding{
+    padding-top: 0px;
+}
 
 
